kubernetes/base/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demoapp-app

  labels:
    app: demoapp

# https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#deploymentspec-v1-apps
spec:
  replicas: 1

  selector:
    matchLabels:
      app: demoapp

  template:
    metadata:
      labels:
        app: demoapp

    spec:
      securityContext:
        # Must match Dockerfile's USER_ID for User and Group
        runAsUser: 1001
        runAsGroup: 1001
        # Set ownership of mounted volumes to the user running the container
        fsGroup: 1001

      # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#container-v1-core
      containers:
        - name: demoapp-container
          image: ghcr.io/briansigafoos/docker-rails-webpacker-app
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true

          # TODO: revisit these numbers based on actual production usage
          # and monitoring: kubectl resource-capacity --pods --util -n demoapp
          resources:
            requests:
              cpu: 100m
              memory: 600Mi
            limits:
              cpu: 1000m # 1 core
              memory: 1000Mi

          # Pass k8s metadata to containers. Can be used to tag requests.
          ports:
            - name: pod-port
              containerPort: 3000 # http port, same as in config/puma.rb

          livenessProbe:
            httpGet:
              path: /health_check
              port: pod-port
            periodSeconds: 10
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /health_check
              port: pod-port
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30

          # TODO: how is this different than livenessProbe?
          # readinessProbe:
          #   httpGet:
          #     path: /health_check
          #     port: pod-port
          #   periodSeconds: 10
          #   failureThreshold: 3

          volumeMounts:
            # Since the container file system is read-only,
            # we'll mount /app/tmp to allow writes to it by Rails cache
            # /app/tmp/cache/ and Puma /app/tmp/server.pid
            - name: app-tmp
              mountPath: /app/tmp

      # Ruby's Dir.tmpdir won't allow us to use the mounted folder /app/tmp
      # for Tempfile.new. This initContainer creates a new /tmp folder inside
      # the mounted folder that will have the correct folder permission.
      # https://ruby-doc.org/stdlib-3.0.2/libdoc/tmpdir/rdoc/Dir.html
      imagePullSecrets:
        - name: ghcr-k8s-pull
        - name: dockerhub-k8s-pull

      volumes:
        - name: app-tmp
          emptyDir: {}
