kubernetes/base/deployment-sidekiq.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demoapp-sidekiq

  labels:
    app: sidekiq

# https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#deploymentspec-v1-apps
spec:
  replicas: 1

  selector:
    matchLabels:
      app: sidekiq

  template:
    metadata:
      labels:
        app: sidekiq

    spec:
      securityContext:
        # Must match Dockerfile's USER_ID for User and Group
        runAsUser: 1001
        runAsGroup: 1001
        # Set ownership of mounted volumes to the user running the container
        fsGroup: 1001

      # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#container-v1-core
      containers:
        - name: sidekiq-container
          image: ghcr.io/briansigafoos/docker-rails-webpacker-app
          command: ['bundle', 'exec', 'sidekiq']
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true

          # TODO: revisit these numbers based on actual production usage
          # and monitoring: kubectl resource-capacity --pods --util -n demoapp
          resources:
            requests:
              cpu: 50m
              memory: 300Mi
            limits:
              cpu: 500m
              memory: 500Mi

          # Pass k8s metadata to containers. Used to tag requests in AppSignal.
          volumeMounts:
            # Since the container file system is read-only,
            # we'll mount /app/tmp to allow writes to it by Rails cache
            # /app/tmp/cache/
            - name: app-tmp
              mountPath: /app/tmp

      # Ruby's Dir.tmpdir won't allow us to use the mounted folder /app/tmp
      # for Tempfile.new. This initContainer creates a new /tmp folder inside
      # the mounted folder that will have the correct folder permission.
      # https://ruby-doc.org/stdlib-3.0.2/libdoc/tmpdir/rdoc/Dir.html
      imagePullSecrets:
        - name: ghcr-k8s-pull
        - name: dockerhub-k8s-pull

      volumes:
        - name: app-tmp
          emptyDir: {}
