kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demoapp-service

  labels:
    app: demoapp

# https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#service-v1-core
spec:
  type: NodePort

  selector:
    app: demoapp

  ports:
    - port: 80
      targetPort: pod-port # 3000
      # protocol: TCP # default
      # name: <service-port> # not needed since only 1 port
